parser/y.output

state 0
	$accept: .program $end 
	beforeProgram: .    (2)

	.  reduce 2 (src line 89)

	program  goto 1
	beforeProgram  goto 2

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  beforeProgram.body 

	IDENTIFIER  shift 9
	CLICK  shift 10
	INPUT  shift 11
	PRINT  shift 12
	SLOW  shift 13
	RETURN  shift 7
	FOR  shift 14
	SELECT  shift 15
	.  error

	statement  goto 6
	body  goto 3
	statements  goto 4
	returnStatements  goto 5
	loopStatement  goto 8

state 3
	program:  beforeProgram body.    (1)

	.  reduce 1 (src line 85)


state 4
	body:  statements.returnStatements 
	statements:  statements.statement 

	IDENTIFIER  shift 9
	CLICK  shift 10
	INPUT  shift 11
	PRINT  shift 12
	SLOW  shift 13
	RETURN  shift 7
	FOR  shift 14
	SELECT  shift 15
	.  error

	statement  goto 17
	returnStatements  goto 16
	loopStatement  goto 8

state 5
	body:  returnStatements.    (4)

	.  reduce 4 (src line 95)


state 6
	statements:  statement.    (5)

	.  reduce 5 (src line 98)


state 7
	returnStatements:  RETURN.returnList0 SEMICOLON 
	returnStatements:  RETURN.DISTINCT returnList SEMICOLON 
	returnList0: .    (24)

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	DISTINCT  shift 19
	AT  shift 31
	.  reduce 24 (src line 137)

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 21
	returnList0  goto 18
	returnList  goto 20

state 8
	returnStatements:  loopStatement.body 

	IDENTIFIER  shift 9
	CLICK  shift 10
	INPUT  shift 11
	PRINT  shift 12
	SLOW  shift 13
	RETURN  shift 7
	FOR  shift 14
	SELECT  shift 15
	.  error

	statement  goto 6
	body  goto 34
	statements  goto 4
	returnStatements  goto 5
	loopStatement  goto 8

state 9
	statement:  IDENTIFIER.ASSIGN expression SEMICOLON 

	ASSIGN  shift 35
	.  error


state 10
	statement:  CLICK.atomExpression clickOptions0 SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 36

state 11
	statement:  INPUT.atomExpression IN atomExpression SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 37

state 12
	statement:  PRINT.expressionList SEMICOLON 
	statement:  PRINT.RAW expressionList SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	RAW  shift 39
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 40
	variable  goto 23
	expressionList  goto 38
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 13
	statement:  SLOW.SEMICOLON 

	SEMICOLON  shift 54
	.  error


state 14
	loopStatement:  FOR.loopVariable IN expression SEMICOLON 

	IDENTIFIER  shift 56
	.  error

	loopVariable  goto 55

state 15
	loopStatement:  SELECT.expression AS loopVariable FROM expression selectOptions0 SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 57
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 16
	body:  statements returnStatements.    (3)

	.  reduce 3 (src line 93)


state 17
	statements:  statements statement.    (6)

	.  reduce 6 (src line 100)


state 18
	returnStatements:  RETURN returnList0.SEMICOLON 

	SEMICOLON  shift 58
	.  error


state 19
	returnStatements:  RETURN DISTINCT.returnList SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 21
	returnList  goto 59

state 20
	returnList0:  returnList.    (25)
	returnList:  returnList.COMMA atomExpression 

	COMMA  shift 60
	.  reduce 25 (src line 139)


state 21
	returnList:  atomExpression.    (26)

	.  reduce 26 (src line 142)


state 22
	atomExpression:  litteral.    (47)

	.  reduce 47 (src line 202)


state 23
	atomExpression:  variable.    (48)

	.  reduce 48 (src line 204)


state 24
	atomExpression:  LPAREN.expression RPAREN 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 61
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 25
	litteral:  STRING.    (50)

	.  reduce 50 (src line 208)


state 26
	litteral:  NUMBER.    (51)

	.  reduce 51 (src line 210)


state 27
	litteral:  BOOL.    (52)

	.  reduce 52 (src line 211)


state 28
	litteral:  litteralArray.    (53)

	.  reduce 53 (src line 212)


state 29
	litteral:  litteralObject.    (54)

	.  reduce 54 (src line 213)


state 30
	variable:  IDENTIFIER.    (37)

	.  reduce 37 (src line 170)


state 31
	variable:  AT.IDENTIFIER 

	IDENTIFIER  shift 62
	.  error


state 32
	litteralArray:  LBRACKET.expressionList RBRACKET 
	litteralArray:  LBRACKET.RBRACKET 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	RBRACKET  shift 64
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 40
	variable  goto 23
	expressionList  goto 63
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 33
	litteralObject:  LBRACE.RBRACE 
	litteralObject:  LBRACE.keyValueSet RBRACE 

	IDENTIFIER  shift 69
	RBRACE  shift 65
	.  error

	keyValue  goto 67
	key  goto 68
	keyValueSet  goto 66

state 34
	returnStatements:  loopStatement body.    (23)

	.  reduce 23 (src line 134)


state 35
	statement:  IDENTIFIER ASSIGN.expression SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 70
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 36
	statement:  CLICK atomExpression.clickOptions0 SEMICOLON 
	clickOptions0: .    (13)

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LEFT  shift 74
	RIGHT  shift 75
	MIDDLE  shift 76
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	AT  shift 31
	.  reduce 13 (src line 114)

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 77
	clickOptions0  goto 71
	clickOptions  goto 72
	clickOption  goto 73

state 37
	statement:  INPUT atomExpression.IN atomExpression SEMICOLON 

	IN  shift 78
	.  error


state 38
	statement:  PRINT expressionList.SEMICOLON 
	expressionList:  expressionList.COMMA expression 

	SEMICOLON  shift 79
	COMMA  shift 80
	.  error


state 39
	statement:  PRINT RAW.expressionList SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 40
	variable  goto 23
	expressionList  goto 81
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 40
	expression:  expression.ope2Bool expression1 
	expressionList:  expression.    (59)

	AND  shift 83
	OR  shift 84
	.  reduce 59 (src line 226)

	ope2Bool  goto 82

state 41
	expression:  expression1.    (40)
	expression1:  expression1.ope2 expression2 

	PLUS  shift 86
	MINUS  shift 87
	MULTI  shift 88
	DIV  shift 89
	MOD  shift 90
	EQ  shift 92
	NEQ  shift 93
	LT  shift 96
	LTE  shift 97
	GT  shift 94
	GTE  shift 95
	RANGE  shift 91
	.  reduce 40 (src line 184)

	ope2  goto 85

state 42
	expression1:  expression2.    (42)

	.  reduce 42 (src line 189)


state 43
	expression2:  ope1.expression2 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression2  goto 98
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 44
	expression2:  expression3.    (44)

	.  reduce 44 (src line 194)


state 45
	ope1:  PLUS.    (66)

	.  reduce 66 (src line 245)


state 46
	ope1:  MINUS.    (67)

	.  reduce 67 (src line 247)


state 47
	ope1:  PLUSPLUS.    (68)

	.  reduce 68 (src line 248)


state 48
	ope1:  MINUSMINUS.    (69)

	.  reduce 69 (src line 249)


state 49
	ope1:  ABS.    (70)

	.  reduce 70 (src line 250)


state 50
	ope1:  LEN.    (71)

	.  reduce 71 (src line 251)


state 51
	ope1:  NOT.    (72)

	.  reduce 72 (src line 252)


state 52
	expression3:  atomExpression.    (45)
	accessExpression:  atomExpression.LBRACKET expression RBRACKET 
	accessExpression:  atomExpression.DOT key 

	LBRACKET  shift 99
	DOT  shift 100
	.  reduce 45 (src line 197)


state 53
	expression3:  accessExpression.    (46)

	.  reduce 46 (src line 199)


state 54
	statement:  SLOW SEMICOLON.    (12)

	.  reduce 12 (src line 111)


state 55
	loopStatement:  FOR loopVariable.IN expression SEMICOLON 

	IN  shift 101
	.  error


state 56
	loopVariable:  IDENTIFIER.    (30)

	.  reduce 30 (src line 151)


state 57
	loopStatement:  SELECT expression.AS loopVariable FROM expression selectOptions0 SEMICOLON 
	expression:  expression.ope2Bool expression1 

	AS  shift 102
	AND  shift 83
	OR  shift 84
	.  error

	ope2Bool  goto 82

state 58
	returnStatements:  RETURN returnList0 SEMICOLON.    (21)

	.  reduce 21 (src line 131)


state 59
	returnStatements:  RETURN DISTINCT returnList.SEMICOLON 
	returnList:  returnList.COMMA atomExpression 

	SEMICOLON  shift 103
	COMMA  shift 60
	.  error


state 60
	returnList:  returnList COMMA.atomExpression 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 104

state 61
	expression:  expression.ope2Bool expression1 
	atomExpression:  LPAREN expression.RPAREN 

	RPAREN  shift 105
	AND  shift 83
	OR  shift 84
	.  error

	ope2Bool  goto 82

state 62
	variable:  AT IDENTIFIER.    (38)

	.  reduce 38 (src line 172)


state 63
	litteralArray:  LBRACKET expressionList.RBRACKET 
	expressionList:  expressionList.COMMA expression 

	COMMA  shift 80
	RBRACKET  shift 106
	.  error


state 64
	litteralArray:  LBRACKET RBRACKET.    (58)

	.  reduce 58 (src line 223)


state 65
	litteralObject:  LBRACE RBRACE.    (61)

	.  reduce 61 (src line 231)


state 66
	litteralObject:  LBRACE keyValueSet.RBRACE 
	keyValueSet:  keyValueSet.COMMA keyValue 

	COMMA  shift 108
	RBRACE  shift 107
	.  error


state 67
	keyValueSet:  keyValue.    (63)

	.  reduce 63 (src line 236)


state 68
	keyValue:  key.COLON expression 

	COLON  shift 109
	.  error


state 69
	key:  IDENTIFIER.    (87)

	.  reduce 87 (src line 276)


state 70
	statement:  IDENTIFIER ASSIGN expression.SEMICOLON 
	expression:  expression.ope2Bool expression1 

	SEMICOLON  shift 110
	AND  shift 83
	OR  shift 84
	.  error

	ope2Bool  goto 82

state 71
	statement:  CLICK atomExpression clickOptions0.SEMICOLON 

	SEMICOLON  shift 111
	.  error


state 72
	clickOptions0:  clickOptions.    (14)
	clickOptions:  clickOptions.clickOption 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LEFT  shift 74
	RIGHT  shift 75
	MIDDLE  shift 76
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	AT  shift 31
	.  reduce 14 (src line 116)

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 77
	clickOption  goto 112

state 73
	clickOptions:  clickOption.    (15)

	.  reduce 15 (src line 119)


state 74
	clickOption:  LEFT.    (17)

	.  reduce 17 (src line 124)


state 75
	clickOption:  RIGHT.    (18)

	.  reduce 18 (src line 126)


state 76
	clickOption:  MIDDLE.    (19)

	.  reduce 19 (src line 127)


state 77
	clickOption:  atomExpression.    (20)

	.  reduce 20 (src line 128)


state 78
	statement:  INPUT atomExpression IN.atomExpression SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 113

state 79
	statement:  PRINT expressionList SEMICOLON.    (10)

	.  reduce 10 (src line 109)


state 80
	expressionList:  expressionList COMMA.expression 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 114
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 81
	statement:  PRINT RAW expressionList.SEMICOLON 
	expressionList:  expressionList.COMMA expression 

	SEMICOLON  shift 115
	COMMA  shift 80
	.  error


state 82
	expression:  expression ope2Bool.expression1 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 116
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 83
	ope2Bool:  AND.    (85)

	.  reduce 85 (src line 271)


state 84
	ope2Bool:  OR.    (86)

	.  reduce 86 (src line 273)


state 85
	expression1:  expression1 ope2.expression2 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression2  goto 117
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 86
	ope2:  PLUS.    (73)

	.  reduce 73 (src line 256)


state 87
	ope2:  MINUS.    (74)

	.  reduce 74 (src line 258)


state 88
	ope2:  MULTI.    (75)

	.  reduce 75 (src line 259)


state 89
	ope2:  DIV.    (76)

	.  reduce 76 (src line 260)


state 90
	ope2:  MOD.    (77)

	.  reduce 77 (src line 261)


state 91
	ope2:  RANGE.    (78)

	.  reduce 78 (src line 262)


state 92
	ope2:  EQ.    (79)

	.  reduce 79 (src line 263)


state 93
	ope2:  NEQ.    (80)

	.  reduce 80 (src line 264)


state 94
	ope2:  GT.    (81)

	.  reduce 81 (src line 265)


state 95
	ope2:  GTE.    (82)

	.  reduce 82 (src line 266)


state 96
	ope2:  LT.    (83)

	.  reduce 83 (src line 267)


state 97
	ope2:  LTE.    (84)

	.  reduce 84 (src line 268)


state 98
	expression2:  ope1 expression2.    (43)

	.  reduce 43 (src line 192)


state 99
	accessExpression:  atomExpression LBRACKET.expression RBRACKET 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 118
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 100
	accessExpression:  atomExpression DOT.key 

	IDENTIFIER  shift 69
	.  error

	key  goto 119

state 101
	loopStatement:  FOR loopVariable IN.expression SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 120
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 102
	loopStatement:  SELECT expression AS.loopVariable FROM expression selectOptions0 SEMICOLON 

	IDENTIFIER  shift 56
	.  error

	loopVariable  goto 121

state 103
	returnStatements:  RETURN DISTINCT returnList SEMICOLON.    (22)

	.  reduce 22 (src line 133)


state 104
	returnList:  returnList COMMA atomExpression.    (27)

	.  reduce 27 (src line 144)


state 105
	atomExpression:  LPAREN expression RPAREN.    (49)

	.  reduce 49 (src line 205)


state 106
	litteralArray:  LBRACKET expressionList RBRACKET.    (57)

	.  reduce 57 (src line 221)


state 107
	litteralObject:  LBRACE keyValueSet RBRACE.    (62)

	.  reduce 62 (src line 233)


state 108
	keyValueSet:  keyValueSet COMMA.keyValue 

	IDENTIFIER  shift 69
	.  error

	keyValue  goto 122
	key  goto 68

state 109
	keyValue:  key COLON.expression 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 123
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 110
	statement:  IDENTIFIER ASSIGN expression SEMICOLON.    (7)

	.  reduce 7 (src line 103)


state 111
	statement:  CLICK atomExpression clickOptions0 SEMICOLON.    (8)

	.  reduce 8 (src line 105)


state 112
	clickOptions:  clickOptions clickOption.    (16)

	.  reduce 16 (src line 121)


state 113
	statement:  INPUT atomExpression IN atomExpression.SEMICOLON 

	SEMICOLON  shift 124
	.  error


state 114
	expression:  expression.ope2Bool expression1 
	expressionList:  expressionList COMMA expression.    (60)

	AND  shift 83
	OR  shift 84
	.  reduce 60 (src line 228)

	ope2Bool  goto 82

state 115
	statement:  PRINT RAW expressionList SEMICOLON.    (11)

	.  reduce 11 (src line 110)


state 116
	expression:  expression ope2Bool expression1.    (39)
	expression1:  expression1.ope2 expression2 

	PLUS  shift 86
	MINUS  shift 87
	MULTI  shift 88
	DIV  shift 89
	MOD  shift 90
	EQ  shift 92
	NEQ  shift 93
	LT  shift 96
	LTE  shift 97
	GT  shift 94
	GTE  shift 95
	RANGE  shift 91
	.  reduce 39 (src line 182)

	ope2  goto 85

state 117
	expression1:  expression1 ope2 expression2.    (41)

	.  reduce 41 (src line 187)


state 118
	expression:  expression.ope2Bool expression1 
	accessExpression:  atomExpression LBRACKET expression.RBRACKET 

	RBRACKET  shift 125
	AND  shift 83
	OR  shift 84
	.  error

	ope2Bool  goto 82

state 119
	accessExpression:  atomExpression DOT key.    (56)

	.  reduce 56 (src line 218)


state 120
	loopStatement:  FOR loopVariable IN expression.SEMICOLON 
	expression:  expression.ope2Bool expression1 

	SEMICOLON  shift 126
	AND  shift 83
	OR  shift 84
	.  error

	ope2Bool  goto 82

state 121
	loopStatement:  SELECT expression AS loopVariable.FROM expression selectOptions0 SEMICOLON 

	FROM  shift 127
	.  error


state 122
	keyValueSet:  keyValueSet COMMA keyValue.    (64)

	.  reduce 64 (src line 238)


state 123
	expression:  expression.ope2Bool expression1 
	keyValue:  key COLON expression.    (65)

	AND  shift 83
	OR  shift 84
	.  reduce 65 (src line 241)

	ope2Bool  goto 82

state 124
	statement:  INPUT atomExpression IN atomExpression SEMICOLON.    (9)

	.  reduce 9 (src line 106)


state 125
	accessExpression:  atomExpression LBRACKET expression RBRACKET.    (55)

	.  reduce 55 (src line 216)


state 126
	loopStatement:  FOR loopVariable IN expression SEMICOLON.    (28)

	.  reduce 28 (src line 146)


state 127
	loopStatement:  SELECT expression AS loopVariable FROM.expression selectOptions0 SEMICOLON 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 128
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 128
	loopStatement:  SELECT expression AS loopVariable FROM expression.selectOptions0 SEMICOLON 
	expression:  expression.ope2Bool expression1 
	selectOptions0: .    (31)

	WHERE  shift 132
	LIMIT  shift 133
	AND  shift 83
	OR  shift 84
	.  reduce 31 (src line 155)

	selectOptions0  goto 129
	selectOptions  goto 130
	selectOption  goto 131
	ope2Bool  goto 82

state 129
	loopStatement:  SELECT expression AS loopVariable FROM expression selectOptions0.SEMICOLON 

	SEMICOLON  shift 134
	.  error


state 130
	selectOptions0:  selectOptions.    (32)
	selectOptions:  selectOptions.selectOption 

	WHERE  shift 132
	LIMIT  shift 133
	.  reduce 32 (src line 157)

	selectOption  goto 135

state 131
	selectOptions:  selectOption.    (33)

	.  reduce 33 (src line 160)


state 132
	selectOption:  WHERE.expression 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 136
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 133
	selectOption:  LIMIT.expression 

	BOOL  shift 27
	NUMBER  shift 26
	STRING  shift 25
	IDENTIFIER  shift 30
	LPAREN  shift 24
	LBRACKET  shift 32
	LBRACE  shift 33
	LEN  shift 50
	PLUS  shift 45
	MINUS  shift 46
	PLUSPLUS  shift 47
	MINUSMINUS  shift 48
	ABS  shift 49
	NOT  shift 51
	AT  shift 31
	.  error

	litteral  goto 22
	litteralArray  goto 28
	expression  goto 137
	variable  goto 23
	litteralObject  goto 29
	atomExpression  goto 52
	expression1  goto 41
	expression2  goto 42
	ope1  goto 43
	expression3  goto 44
	accessExpression  goto 53

state 134
	loopStatement:  SELECT expression AS loopVariable FROM expression selectOptions0 SEMICOLON.    (29)

	.  reduce 29 (src line 148)


state 135
	selectOptions:  selectOptions selectOption.    (34)

	.  reduce 34 (src line 162)


state 136
	selectOption:  WHERE expression.    (35)
	expression:  expression.ope2Bool expression1 

	AND  shift 83
	OR  shift 84
	.  reduce 35 (src line 165)

	ope2Bool  goto 82

state 137
	selectOption:  LIMIT expression.    (36)
	expression:  expression.ope2Bool expression1 

	AND  shift 83
	OR  shift 84
	.  reduce 36 (src line 167)

	ope2Bool  goto 82

68 terminals, 34 nonterminals
88 grammar rules, 138/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
83 working sets used
memory: parser 414/240000
40 extra closures
422 shift entries, 1 exceptions
65 goto entries
196 entries saved by goto default
Optimizer space used: output 262/240000
262 table entries, 51 zero
maximum spread: 68, maximum offset: 133
